# customforecaster

./: README.md  pyproject.toml
customforecaster/dataprep/: decomposition.py  imputation.py  outlier_detection.py
customforecaster/evaluation/: evaluator.py
customforecaster/feature_engineering/: autoregressive_features.py  temporal_features.py
customforecaster/forecasting/: mlforecaster.py
customforecaster/utils/: plotting_utils.py
